@@ -1,3 +1,7 @@
+2021-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/models_waving_cubes.rb: Added
+
 2021-10-26  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_rlgl_solar_system.rb: Added
